# game_of_life

./: README.md  pyproject.toml  requirements.txt  run.py  setup.cfg
src/: app.py  schemas.py  services.py  settings.py
src/staticfiles/: index.html  main.js  styles.css
