[tool.poetry]
name = "game-of-life"
version = "0.1.0"
description = "rc-online job assessment"
authors = ["Ivan Skvortsov <pprofcheg@gmail.com>"]
readme = "README.md"
packages = [{include = "game_of_life"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic-settings = "^2.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
